--- a/public/style.css
+++ b/public/style.css
@@ -2,22 +2,47 @@
     cursor: none;
 }
 
-#zonemusic{
-    margin-top: 30px;
-    width: 80%;
-    margin: 0 auto;
+body{
+      font-family: "Times New Roman", Times, serif;
 }
 
-#zone1{
+#zonemusic{
     margin-top: 30px;
-    width: 70%;
+    width: 95%;
     margin: 0 auto;
+    outline: 5px solid #9dcf26;
+}
+
+#zone1 {
+    margin-top: 30px;
+    width: 85%;
+    margin: 0 auto;
+    background-image: url("https://images.hdqwalls.com/wallpapers/bthumb/blue-forest-minimal-4k-kz.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(128, 171, 130, 0.8);
+    color: white;
+    outline: 5px solid #ffffff;
+    font-weight: bold;
+}
+
+
+#zone1::before {
+    content: ' ';
+    font-weight: bold;
+}
+
+#zone1::after {
+    content: ' ';
+    font-weight: bold;
 }
 
 #zone2{
     margin-top: 30px;
     width: 70%;
     margin: 0 auto;
+
 }
 
 .episodes {
@@ -25,16 +50,19 @@
 }
 
 .hero {
-height: 130vh;
+height: 120vh;
 }
 
 .dropdown {
 cursor: pointer;
 }
 
+
+
 .dropdown.is-active {
 background-color: lightblue;
 }
+
 
 #logindis{
 margin-left: 20px;
@@ -45,9 +73,14 @@ margin-left: 20px;
 display: none;
 }
 
-.hero{
-background-color: #80AB82;
+.hero {
+    background-color: #80AB82;
+    background-image: url("https://wallpaperaccess.com/full/812553.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
 
 .circular-avatar {
 width: 100px;
@@ -67,6 +100,8 @@ height: 100px;
 border-radius: 50%;
 object-fit: cover;
 margin-right: 20px;
+outline: 3px solid #ffffff;
+
 }
 
 .user-details {
@@ -91,4 +126,24 @@ background-color: rgb(180, 228, 180);
 
 #embeddown {
 margin-top: 50px;
+}
+
+.footer{
+    background-image: url("https://i.pinimg.com/originals/61/ee/a1/61eea19016526c5f0920b5ac39761007.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(128, 171, 130, 0.8);
+    color: white;
+    font-weight: bold;
+}
+
+.navbar{
+    background-image: url("https://th.bing.com/th/id/OIP.PHGpRCZHVJySGha12Zgw_QHaEK?pid=ImgDet&rs=1");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(128, 171, 130, 0.8);
+    color: white;
+    font-weight: bold;
 }
